fix photo spacing on ipad horizontal view

--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ span.new-snowflake {
   box-shadow: 2px 2px 5px rgb(var(--secondary-bg-color));
 }
 
-@media (min-width: 768px) and (min-height: 1024px) {
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation: portrait) {
   #slideshow-images {
     max-height: 60vh;
   }
